android: Multiplayer support
Co-Authored-By: zhang wei <zwdreams@gmail.com>
Co-Authored-By: Gamer64 <76565986+Gamer64ytb@users.noreply.github.com>

--- a/src/android/app/src/main/jni/CMakeLists.txt
+++ b/src/android/app/src/main/jni/CMakeLists.txt
@@ -24,6 +24,8 @@ add_library(lime-android SHARED
     game_settings.h
     id_cache.cpp
     id_cache.h
+    multiplayer.cpp
+    multiplayer.h
     native.cpp
     ndk_motion.cpp
     ndk_motion.h
